# alocacao-solver

./: .dockerignore  .env.example  .gitignore  AGENTS.md  Dockerfile  README.md  docker-compose.prod.yml  docker-compose.yml  pyproject.toml
.github/workflows/: ci.yml
app/api/: dependencies.py  routes.py  schemas.py
app/solver/: callbacks.py  core.py  engine.py  utils.py
app/worker/: processor.py  sweeper.py  tasks.py
docs/: API_CONTRACT.md  INFRA_AND_WORKER.md  MATHEMATICAL_MODEL.md
scripts/: optuna_calibrate.py
tests/: test_e2e_lifecycle.py  test_optuna_calibrate.py  test_routes.py  test_schemas.py  test_solver_callbacks.py  test_solver_engine.py  test_solver_utils.py  test_worker_webhook.py
